Revision history for Perl extension HTTP::BrowserDetect.

{{$NEXT}}

1.66 2013-12-17 11:37:20 America/Toronto
    - Adds detection for IE Compatibility View (Douglas Christopher Wilson)

1.65 2013-12-10 21:08:07 America/Toronto
    - Adds os_version for FireFox in OS X (Hao Wu)

1.64 2013-11-25 10:10:23 America/Toronto
    - Adds detection for Opera 15+ (Douglas Christopher Wilson)

1.63 2013-11-21 21:39:46 America/Toronto
    - Adds detection for Internet Explorer 11 (Douglas Christopher Wilson)
    - Adds detection for Windows 8.1 (Douglas Christopher Wilson)

1.62 2013-10-25 14:40:57 America/Toronto
    - Returns explicit undef more consistently (David Ihnen)

1.61 2013-09-06 15:47:57 America/Toronto
    - Reverts a commit that was causing a test to fail when a warning about
      File::Slurp was detected

1.60 2013-08-29 23:02:13 America/Toronto
    - Fixes bug where "Linux" rather than "Android" was returned as os_string
      for Android devices.

1.59 2013-08-18 00:38:21 America/Toronto
    - Revert 1.57's behaviour of returning a robot name in browser_string.
    - Fix bug where OS X identied as just Mac in os_string.
    - Add linkchecker, YandexImages and archive.org_bot bots.
    - Add undocumented os_version() for OS X, winPhone, Android, iOS, Firefox
      OS.

1.58 2013-08-16 23:37:23 America/Toronto
    - Break up parsing into smaller chunks.
    - Return better names for Googlebot News, Images and Video.
    - Fix bug where Yahoo! Slurp reported as Firefox.

1.57 2013-08-16 01:21:35 America/Toronto
    - Make internals a little less quirky.
    - Stop returning explicit undef for browser_string and os_string.  (Why
      would you ever call these in list context?)
    - Return name of robot for browser_string when browser is, in fact, a bot.
      Previous behaviour was to return undef or something just really wrong.

1.56 2013-08-15 01:02:32 America/Toronto
    - Adds experimental and undocumented robot_name method.
