@@ -119,6 +119,7 @@ our @ENGINE_TESTS = qw(
 # https://support.google.com/webmasters/answer/1061943?hl=en
 
 my %ROBOTS = (
+    ahrefs         => 'Ahrefs',
     altavista      => 'AltaVista',
     askjeeves      => 'AskJeeves',
     baidu          => 'Baidu Spider',
@@ -150,6 +151,7 @@ my %ROBOTS = (
     webtv          => 'WebTV',
     wget           => 'wget',
     yahoo          => 'Yahoo',
+    yandex         => 'Yandex',
     yandeximages   => 'YandexImages',
 );
 
@@ -166,6 +168,7 @@ our @ROBOT_TESTS = qw(
     askjeeves    googleadsense googlebotvideo
     googlebotnews googlebotimage google
     linkchecker  yandeximages specialarchiver
+    yandex       ahrefs
 );
 
 our @MISC_TESTS = qw(
@@ -754,6 +757,7 @@ sub _robot_tests {
         ) != -1
     );
 
+    $tests->{AHREFS}         = ( index( $ua, "ahrefsbot" ) != -1 );
     $tests->{ALTAVISTA}      = ( index( $ua, "altavista" ) != -1 );
     $tests->{ASKJEEVES}      = ( index( $ua, "ask jeeves/teoma" ) != -1 );
     $tests->{BAIDU}          = ( index( $ua, "baiduspider" ) != -1 );
@@ -777,10 +781,12 @@ sub _robot_tests {
     $tests->{SPECIALARCHIVER}          = ( index( $ua, "special_archiver" ) != -1 );
     $tests->{WEBCRAWLER}     = ( index( $ua, "webcrawler" ) != -1 );
     $tests->{WGET}           = ( index( $ua, "wget" ) != -1 );
+    $tests->{YANDEX}         = ( index( $ua, "yandexbot" ) != -1 );
     $tests->{YANDEXIMAGES}   = ( index( $ua, "yandeximages" ) != -1 );
 
     $tests->{ROBOT}
-        = (    $tests->{ALTAVISTA}
+        = (    $tests->{AHREFS}
+            || $tests->{ALTAVISTA}
             || $tests->{ASKJEEVES}
             || $tests->{BAIDU}
             || $tests->{FACEBOOK}
@@ -806,6 +812,7 @@ sub _robot_tests {
             || $tests->{WEBCRAWLER}
             || $tests->{WGET}
             || $tests->{YAHOO}
+            || $tests->{YANDEX}
             || $tests->{YANDEXIMAGES} )
         || index( $ua, "agent" ) != -1
         || index( $ua, "bot" ) != -1
@@ -1864,6 +1871,8 @@ automated Web client.
 The following additional methods are available, each returning a true or false
 value. This is by no means a complete list of robots that exist on the Web.
 
+=head3 ahrefs
+
 =head3 altavista
 
 =head3 askjeeves
@@ -1902,6 +1911,9 @@ value. This is by no means a complete list of robots that exist on the Web.
 
 =head3 yahoo
 
+=head3 yandex
+
+=head3 yandeximages
 
 =head1 CREDITS
 
@@ -1992,6 +2004,8 @@ yeahoffline
 David Ihnen
 
 Hao Wu
+
+Perlover
 
 =head1 TO DO
 
